# spyglass-skill-workspace

./: .gitignore  README.md  pyproject.toml  ruff.toml
runs/round-c-2026-04-28/: BATCHES.md  evals_snapshot.json  findings.md  run.json
runs/round-c-2026-04-28/iteration-1/: .agent_map.json  benchmark.json  grader_summary.md
runs/round-c-2026-04-28/iteration-2/: .agent_map.json  benchmark.json  grader_summary.md
runs/round-c-2026-04-28/iteration-3/: .agent_map.json  benchmark.json  grader_summary.md
runs/round-c-2026-04-28/iteration-4/: .agent_map.json  benchmark.json  codex_grade_summary.md  grader_summary.md
runs/round-c-2026-04-28/iteration-5/: .agent_map.json  benchmark.json  codex_grade_summary.md  grader_summary.md
runs/round-c-2026-04-28/iteration-6/: .agent_map.json  benchmark.json  benchmark.md  codex_grade_summary.md  grader_summary.md
runs/round-c-2026-04-28/iteration-7/: .agent_map.json  benchmark.json  codex_grade_summary.md  grader_summary.md
runs/round-c-2026-04-28/summary/: INDEX.md  SUMMARY.md  baseline_source_split.json  batch_summary.csv  eval_coverage.csv  (+23 more)
runs/round-d-2026-04-30/: findings.md  run.json
tools/: _aggregations.py  _compare_figures.py  _compare_io.py  _compare_writers.py  _eval_io.py  _figures.py  _schemas.py  _smoketest.py  _staging.py  _transcripts.py  _util.py  _writers.py  common.py  compare_runs.py  make_plots.py  schemas.py  snapshot_transcripts.py  staging.py  transcripts.py
tools/compare/: core.py  figures.py  writers.py
tools/summary/: aggregations.py  figures.py  io.py  writers.py
tools/tests/: smoke.py
(+1400 files in other folders)
