[project]
name = "spyglass-skill-workspace"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I", "UP"]
